<resources>
    <string name="app_name">EzyCommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="business">business</string>
    <string name="cookbooks">cookbooks</string>
    <string name="mystery">mystery</string>
    <string name="scifi">scifi</string>
    <string name="description">Description</string>
    <string name="buy">Buy</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="subtotal">SUBTOTAL</string>
    <string name="shipping">SHIPPING</string>
    <string name="taxes">TAXES</string>
    <string name="cancel">Cancel</string>
    <string name="free">FREE</string>
    <string name="irvine">Irvine</string>
    <string name="next">Next</string>
</resources>