<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.BookCartListActivity"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/HeaderView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/orange"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="EzyCommerce"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/irvine"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="150dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:src="@drawable/ic_baseline_person_24"
                android:background="@drawable/round_shape"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/ShoppingCartTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/HeaderView"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/shopping_cart"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/BarView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/ShoppingCartTitle"
            android:background="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CartRV"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_below="@+id/BarView"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:id="@+id/BarView2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/CartRV"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:id="@+id/SubTotalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/BarView2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:text="@string/subtotal"
            />

        <TextView
            android:id="@+id/SubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/BarView2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/SubTotalView"
            android:textColor="@color/white"
            tools:text="300"
            />

        <TextView
            android:id="@+id/ShippingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SubTotalView"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:text="@string/shipping"
            />

        <TextView
            android:id="@+id/Shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SubTotalView"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="93dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/ShippingView"
            android:textColor="@color/white"
            android:text="@string/free"
            />

        <TextView
            android:id="@+id/TaxesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ShippingView"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:text="@string/taxes"
            />

        <TextView
            android:id="@+id/Taxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ShippingView"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/SubTotalView"
            android:textColor="@color/white"
            tools:text="300"
            />

        <TextView
            android:id="@+id/BarView3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/TaxesView"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:id="@+id/TotalPriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/BarView3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:text="TOTAL PRICE"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/TotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/BarView3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="86dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/SubTotalView"
            android:textColor="@color/white"
            tools:text="300"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/CancelBtn"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_below="@id/TotalPriceView"
            android:text="@string/cancel"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="110dp"
            android:background="@drawable/customrectanglebutton"
            />

        <Button
            android:id="@+id/NextBtn"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_below="@id/TotalPriceView"
            android:text="Next"
            android:layout_toRightOf="@id/CancelBtn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/customrectanglebutton"
            />

    </RelativeLayout>
</layout>